# ProjectChimera

./: .clinerules  .gitignore  AGENTS.md  CLAUDE.md  Chimera.spec  Modelfile  PACKAGING.md  README.md  architecture.md  build.ps1  check_db.py  force_verify.py  installer.iss  pyproject.toml  requirements.txt  verify_worm.py
.github/workflows/: ci.yml
app/: __init__.py  actions.py  config.yaml  contracts.py  event_bus.py  launcher.py  main.py  setup_check.py  tier1_executive.py  tier2_translation.py  tools.py
app/dashboard/: server.py
app/tests/: conftest.py  test_dashboard_ws.py  test_intent_parsing.py  test_launcher.py  test_neural_brain.py  test_reflex_thresholds.py  test_samplers.py  test_setup.py
app/tier3_reflex/: __init__.py  base.py  fly.py  mouse.py  neural.py  worm.py
config/: chimera.toml
docs/: UPGRADING.md
installer/: README.md  build.ps1  chimera.iss  chimera.spec
scripts/: install_lhm.ps1  install_task.ps1  run_dev.ps1
src/chimera/: __init__.py  __main__.py  bus.py  config.py  daemon.py  logging.py  safety.py  store.py  tray.py
tests/: conftest.py  test_bus.py  test_config.py  test_dashboard.py  test_llm_gate.py  test_safety.py  test_safety_audit.py  test_sensors.py  test_store.py
tests/brains/: test_adapters.py  test_openworm_shards.py
tests/dashboard/: test_state_extras.py  test_state_neuro.py
tests/neuro/: test_dopamine.py  test_glif.py  test_safety_audit_neuro.py
tests/reflexes/: test_fly.py  test_fly_neuro.py  test_lysosome.py  test_mouse.py  test_mouse_cortex.py  test_mouse_protect.py  test_openworm.py  test_worm.py  (+3 more)
(+47 files in other folders)
